# ping

./: CMakeLists.txt  Makefile  README.md  mymake
includes/: ft_ping.h
srcs/: helpers.c  helpers.cpp  helpers_other.c  lib.c  main.c  main.cpp  packet.c  packet.cpp  parse.c  parse.cpp  ping.c  ping.cpp  prepare.c  prepare.cpp  print.c  print.cpp  sendrecv.c  sendrecv.cpp  socket.c  socket.cpp
